prover-ray/zkcdriver/testdata/synced/invalid/if_02.zkc
//error:4:12-13:braces required
fn f(x:u8) -> (r:u8) {
  r = 0
  if x + x * x == 0 {
    r = 1
    return
  }
  return
}
